--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 </head>
 <body>
     
+    <button id="button" type="button">Click Blue</button>
+    <button id="green" type="button">Click Green</button>
+    <button id="button" type="button">Click Purple</button>
+    <button id="button" type="button">Click White</button>
+
+
+
     <script src="assets/javascript/game.js">
         window.onload = function() {
             //run js code here
